# ohm

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  def.json  m_.json  ohm.gypi  ohm.json  package-lock.json  package.json
src/: agent.h  batch.h  batch.hxx  batch_impl.h  batch_impl.hxx  dynamofwd.h  emitter.h  emitter.hxx  emitter_impl.h  emitter_impl.hpp  emitter_impl.hxx  index.h  index.hpp  interface.h  interface.hpp  quemitter.h  quemitter.hxx  quemitter_impl.h  quemitter_impl.hpp  quemitter_impl.hxx  shared_agent.h  shared_agent.hxx
src/impl/: agent.h  batch.h
test/: CMakeLists.txt  agent_life_time.json  build_and_run  concurrent.json  dispatch_logic.json  emit_once.json  emit_while_emit.json  emit_with_arg.json  emit_with_args.json  emitter.json  example2.json  examples.json  m_.json  modify_while_traversal.json  on.json  on_while_emit.json  once_while_emit.json  once_while_emit_recursive.json  qemitter.json  test.gyp  test.json  tests.json
test/lib/asserter/test/: CMakeLists.txt
test/lib/asserter/test/src/: check_assert.cpp
test/lib/circuit/: .gitignore  .gitrepo  CMakeLists.txt  EXAMPLE.md  README.md  circuit.json  package.json
test/lib/circuit/.github/workflows/: test.yml
test/lib/circuit/src/: factory.h  index.h  interface.h  interface.hpp
test/lib/circuit/src/impl/: circuit_host.h  circuit_host.hxx  queue.h  queue.hpp  stack.h
test/lib/circuit/test/: CMakeLists.txt  test.json
test/lib/circuit/test/lib/asserter/: .gitrepo  README.md
test/lib/circuit/test/lib/asserter/.github/workflows/: verify_failure.yml
test/lib/circuit/test/lib/asserter/src/: archiver.hxx
test/lib/circuit/test/lib/asserter/test/src/: check_test_output.cpp
test/lib/circuit/test/src/: example.cpp  main.cpp
test/lib/dynamo/: .gitignore  .gitrepo  .npmignore  CMakeLists.txt  EXAMPLE.md  OTHER.md  README.md  def.json  package.json
test/lib/dynamo/src/: batch.hxx  factory.h  interface.h  interface.hpp
test/lib/dynamo/src/impl/: agent.hxx  batch.h  batch.hpp  batch.hxx
test/lib/dynamo/test/: CMakeLists.txt  em_build_and_run
test/lib/dynamo/test/lib/asserter/: .gitignore  CMakeLists.txt  README.md
test/lib/dynamo/test/lib/asserter/.github/workflows/: verify_failure.yml
test/lib/dynamo/test/lib/asserter/src/: asserter.hpp  asserter.hxx
test/lib/dynamo/test/lib/circuit/: .gitignore  README.md  package.json
test/lib/dynamo/test/lib/circuit/src/: factory.h  index.h  index.hpp
test/lib/dynamo/test/lib/circuit/src/impl/: circuit_host.h  circuit_host.hpp  circuit_host.hxx
test/lib/dynamo/test/lib/circuit/test/: example.json
test/lib/dynamo/test/lib/circuit/test/src/: example.cpp  main.cpp
test/lib/dynamo/test/src/: batch.h  example.cpp  main.cpp
test/plank/: plank.gypi
test/src/: agent_life_time.cpp  agent_life_time.h  batch.h  emit_once.h  (+38 more)
(+29 files in other folders)
